# SuperISOUpdater

./: .gitignore  ConfigFormatExample.toml  EXPANSION_PLAN.md  LICENSE  MANIFEST.in  README.md  build_sisou_exe.bat  config.toml  lint.sh  pyproject.toml  requirements.txt  ruff.toml  setup.py  sisou.py  superiso.py  update_isos.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_mirror.md  new_updater.md
.github/workflows/: lint.yml
config/: config.toml.default  sisou.toml.default
modules/: Checksum.py  DotDashVersion.py  GitHubVersion.py  ISOPath.py  ParsedTokens.py  SISOUConfig.py  SumType.py  Version.py  WindowsConsumerDownload.py  exceptions.py  utils.py
modules/mirrors/: GenericComplexMirror.py  GenericHTTPMirror.py  GenericMirror.py  GenericMirrorManager.py  GitHubMirror.py  __init__.py
modules/mirrors/AlpineLinux/: AlpineLinux.py  AlpineLinuxMirrorManager.py  OVH.py
modules/mirrors/ArchLinux/: ArchLinuxMirrorManager.py  GeoMirror.py  Infania.py  Rackspace.py  __init__.py
modules/mirrors/ArtixLinux/: Akardam.py  ArkHost.py  ArtixLinux.py  (+2 more)
modules/updaters/: AlpineLinux.py  ArchLinux.py  ArtixLinux.py  CachyOS.py  ChromeOS.py  Clonezilla.py  Debian.py  Edubuntu.py  EndeavourOS.py  Fedora.py  FreeBSD.py  FreeDOS.py  GPartedLive.py  GenericUpdater.py  HDAT2.py  HirensBootCDPE.py  KaliLinux.py  Kubuntu.py  LMDE.py  LinuxMint.py  Lubuntu.py  MXLinux.py  Manjaro.py  MemTest86Plus.py  NetBSD.py  OPNsense.py  OpenSUSE.py  OpenSUSERolling.py  ParrotSecurity.py  PfSense.py  PopOS.py  Proxmox.py  PuppyLinux.py  Rescuezilla.py  RockyLinux.py  RockyLinuxLive.py  ShredOS.py  SuperGrub2.py  SystemRescue.py  Tails.py  (+12 more)
(+95 files in other folders)
